--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "m5-d10-Backend-Strivelixs",
-  "version": "1.0.0",
-  "description": "new Backend for our Netflix Clone",
-  "main": "assignment.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config --ignore './db' --ignore './public' ./src/server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express-list-endpoints": "^5.0.0",
-    "express-validator": "^6.8.0",
-    "fs-extra": "^9.0.1",
-    "multer": "^1.4.2",
-    "path": "^0.12.7",
-    "swagger": "^0.7.5",
-    "uniqid": "^5.2.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+	"name": "m5-d10-Backend-Strivelixs",
+	"version": "1.0.0",
+	"description": "new Backend for our Netflix Clone",
+	"main": "assignment.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon -r dotenv/config --ignore './db' --ignore './public' ./src/server.js",
+		"start": "node ./src/server.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express-list-endpoints": "^5.0.0",
+		"express-validator": "^6.8.0",
+		"fs-extra": "^9.0.1",
+		"multer": "^1.4.2",
+		"path": "^0.12.7",
+		"swagger": "^0.7.5",
+		"uniqid": "^5.2.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.6"
+	}
 }
