--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
 		"express-list-endpoints": "^5.0.0",
 		"express-validator": "^6.8.0",
 		"fs-extra": "^9.0.1",
