--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"fs-extra": "^9.0.1",
 		"multer": "^1.4.2",
 		"path": "^0.12.7",
+		"prop-types": "^15.7.2",
 		"swagger": "^0.7.5",
 		"uniqid": "^5.2.0"
 	},
